# NoSQLite

./: README.md
src/: CMakeLists.txt  noSQL.h  testing.cpp
src/mongoDB/: enums.h  mongo.cpp  mongo.h
src/redis/: enums.h  redis.cpp  redis.h
